# seda-request-starter-kit

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  bun.lockb  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: evm-hardhat.yml  main.yml
assembly/: tally-phase.ts
integrations/evm-hardhat/: .gitignore  README.md  biome.json  hardhat.config.ts  package.json  seda.config.ts
integrations/evm-hardhat/contracts/: PriceFeed.sol
integrations/evm-hardhat/tasks/: deploy.ts  index.ts  latest.ts  transmit.ts  utils.ts
integrations/evm-hardhat/test/: PriceFeed.ts
scripts/: post-dr.ts
src/: execution_phase.rs  main.rs  tally_phase.rs
tests/: index.test.ts
