[package]
name = "oracle-program"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
seda-sdk-rs = { git = "https://github.com/sedaprotocol/seda-sdk", branch = "main"}

[profile.release-wasm]
inherits = "release"
lto = "fat"
opt-level = "z"